commit views